--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
    <application
         android:label="flutter_with_native"
         android:icon="@mipmap/ic_launcher">
+
+    <receiver
+        android:name=".MyReceiver"
+        android:enabled="true"
+        android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
