change receiver name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:icon="@mipmap/ic_launcher">
 
     <receiver
-        android:name=".MyReceiver"
+        android:name=".BatteryBroadcastReceiver"
         android:enabled="true"
         android:exported="true" />
 
